--- a/lesson_12/Homework 12.2/index.html
+++ b/lesson_12/Homework 12.2/index.html
@@ -28,6 +28,6 @@
         <td colspan="3" class="addrow">ADD ROW</td>
       </tr>
     </table>
-    <script src="/js/script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
